okta/v6/docs/SignInPageAllOfWidgetCustomizations.md
# SignInPageAllOfWidgetCustomizations

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**SignInLabel** | Pointer to **string** | The label for the sign in widget | [optional] 
**UsernameLabel** | Pointer to **string** | The label for the username field | [optional] 
**UsernameInfoTip** | Pointer to **string** | The label for the username information tip | [optional] 
**PasswordLabel** | Pointer to **string** | The label for the password field | [optional] 
**PasswordInfoTip** | Pointer to **string** | The label for the password information tip | [optional] 
**ShowPasswordVisibilityToggle** | Pointer to **bool** | Allows users to see their passwords as they type | [optional] 
**ShowUserIdentifier** | Pointer to **bool** | Allows the user&#39;s identifier to appear on authentication and enrollment pages | [optional] 
**ForgotPasswordLabel** | Pointer to **string** | The label for the forgot password page | [optional] 
**ForgotPasswordUrl** | Pointer to **string** | The forgot password URL | [optional] 
**UnlockAccountLabel** | Pointer to **string** | The label for the unlock account link | [optional] 
**UnlockAccountUrl** | Pointer to **string** | The unlock account URL | [optional] 
**HelpLabel** | Pointer to **string** | The label for the help link | [optional] 
**HelpUrl** | Pointer to **string** | The help link URL | [optional] 
**CustomLink1Label** | Pointer to **string** | The label for the first custom link | [optional] 
**CustomLink1Url** | Pointer to **string** | The URL for the first custom link | [optional] 
**CustomLink2Label** | Pointer to **string** | The label for the second custom link | [optional] 
**CustomLink2Url** | Pointer to **string** | The URL for the second custom link | [optional] 
**AuthenticatorPageCustomLinkLabel** | Pointer to **string** | The label for the authenticator page custom link | [optional] 
**AuthenticatorPageCustomLinkUrl** | Pointer to **string** | The URL for the authenticator page custom link | [optional] 
**ClassicRecoveryFlowEmailOrUsernameLabel** | Pointer to **string** | The label for the username field in the classic recovery flow | [optional] 
**WidgetGeneration** | Pointer to **string** | The generation of the Sign-in Widget | [optional] 
**PostAuthKeepMeSignedInPrompt** | Pointer to [**PostAuthKeepMeSignedInPrompt**](PostAuthKeepMeSignedInPrompt.md) |  | [optional] 
**ClassicFooterHelpTitle** | Pointer to **string** | The title of the footer link on the sign-in page. Only applicable for Classic Engine orgs. | [optional] 

## Methods

### NewSignInPageAllOfWidgetCustomizations

`func NewSignInPageAllOfWidgetCustomizations() *SignInPageAllOfWidgetCustomizations`

NewSignInPageAllOfWidgetCustomizations instantiates a new SignInPageAllOfWidgetCustomizations object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewSignInPageAllOfWidgetCustomizationsWithDefaults

`func NewSignInPageAllOfWidgetCustomizationsWithDefaults() *SignInPageAllOfWidgetCustomizations`

NewSignInPageAllOfWidgetCustomizationsWithDefaults instantiates a new SignInPageAllOfWidgetCustomizations object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetSignInLabel

`func (o *SignInPageAllOfWidgetCustomizations) GetSignInLabel() string`

GetSignInLabel returns the SignInLabel field if non-nil, zero value otherwise.

### GetSignInLabelOk

`func (o *SignInPageAllOfWidgetCustomizations) GetSignInLabelOk() (*string, bool)`

GetSignInLabelOk returns a tuple with the SignInLabel field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetSignInLabel

`func (o *SignInPageAllOfWidgetCustomizations) SetSignInLabel(v string)`

SetSignInLabel sets SignInLabel field to given value.

### HasSignInLabel

`func (o *SignInPageAllOfWidgetCustomizations) HasSignInLabel() bool`

HasSignInLabel returns a boolean if a field has been set.

### GetUsernameLabel

`func (o *SignInPageAllOfWidgetCustomizations) GetUsernameLabel() string`

GetUsernameLabel returns the UsernameLabel field if non-nil, zero value otherwise.

### GetUsernameLabelOk

`func (o *SignInPageAllOfWidgetCustomizations) GetUsernameLabelOk() (*string, bool)`

GetUsernameLabelOk returns a tuple with the UsernameLabel field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetUsernameLabel

`func (o *SignInPageAllOfWidgetCustomizations) SetUsernameLabel(v string)`

SetUsernameLabel sets UsernameLabel field to given value.

### HasUsernameLabel

`func (o *SignInPageAllOfWidgetCustomizations) HasUsernameLabel() bool`

HasUsernameLabel returns a boolean if a field has been set.

### GetUsernameInfoTip

`func (o *SignInPageAllOfWidgetCustomizations) GetUsernameInfoTip() string`

GetUsernameInfoTip returns the UsernameInfoTip field if non-nil, zero value otherwise.

### GetUsernameInfoTipOk

`func (o *SignInPageAllOfWidgetCustomizations) GetUsernameInfoTipOk() (*string, bool)`

GetUsernameInfoTipOk returns a tuple with the UsernameInfoTip field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetUsernameInfoTip

`func (o *SignInPageAllOfWidgetCustomizations) SetUsernameInfoTip(v string)`

SetUsernameInfoTip sets UsernameInfoTip field to given value.

### HasUsernameInfoTip

`func (o *SignInPageAllOfWidgetCustomizations) HasUsernameInfoTip() bool`

HasUsernameInfoTip returns a boolean if a field has been set.

### GetPasswordLabel

`func (o *SignInPageAllOfWidgetCustomizations) GetPasswordLabel() string`

GetPasswordLabel returns the PasswordLabel field if non-nil, zero value otherwise.

### GetPasswordLabelOk

`func (o *SignInPageAllOfWidgetCustomizations) GetPasswordLabelOk() (*string, bool)`

GetPasswordLabelOk returns a tuple with the PasswordLabel field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetPasswordLabel

`func (o *SignInPageAllOfWidgetCustomizations) SetPasswordLabel(v string)`

SetPasswordLabel sets PasswordLabel field to given value.

### HasPasswordLabel

`func (o *SignInPageAllOfWidgetCustomizations) HasPasswordLabel() bool`

HasPasswordLabel returns a boolean if a field has been set.

### GetPasswordInfoTip

`func (o *SignInPageAllOfWidgetCustomizations) GetPasswordInfoTip() string`

GetPasswordInfoTip returns the PasswordInfoTip field if non-nil, zero value otherwise.

### GetPasswordInfoTipOk

`func (o *SignInPageAllOfWidgetCustomizations) GetPasswordInfoTipOk() (*string, bool)`

GetPasswordInfoTipOk returns a tuple with the PasswordInfoTip field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetPasswordInfoTip

`func (o *SignInPageAllOfWidgetCustomizations) SetPasswordInfoTip(v string)`

SetPasswordInfoTip sets PasswordInfoTip field to given value.

### HasPasswordInfoTip

`func (o *SignInPageAllOfWidgetCustomizations) HasPasswordInfoTip() bool`

HasPasswordInfoTip returns a boolean if a field has been set.

### GetShowPasswordVisibilityToggle

`func (o *SignInPageAllOfWidgetCustomizations) GetShowPasswordVisibilityToggle() bool`

GetShowPasswordVisibilityToggle returns the ShowPasswordVisibilityToggle field if non-nil, zero value otherwise.

### GetShowPasswordVisibilityToggleOk

`func (o *SignInPageAllOfWidgetCustomizations) GetShowPasswordVisibilityToggleOk() (*bool, bool)`

GetShowPasswordVisibilityToggleOk returns a tuple with the ShowPasswordVisibilityToggle field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetShowPasswordVisibilityToggle

`func (o *SignInPageAllOfWidgetCustomizations) SetShowPasswordVisibilityToggle(v bool)`

SetShowPasswordVisibilityToggle sets ShowPasswordVisibilityToggle field to given value.

### HasShowPasswordVisibilityToggle

`func (o *SignInPageAllOfWidgetCustomizations) HasShowPasswordVisibilityToggle() bool`

HasShowPasswordVisibilityToggle returns a boolean if a field has been set.

### GetShowUserIdentifier

`func (o *SignInPageAllOfWidgetCustomizations) GetShowUserIdentifier() bool`

GetShowUserIdentifier returns the ShowUserIdentifier field if non-nil, zero value otherwise.

### GetShowUserIdentifierOk

`func (o *SignInPageAllOfWidgetCustomizations) GetShowUserIdentifierOk() (*bool, bool)`

GetShowUserIdentifierOk returns a tuple with the ShowUserIdentifier field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetShowUserIdentifier

`func (o *SignInPageAllOfWidgetCustomizations) SetShowUserIdentifier(v bool)`

SetShowUserIdentifier sets ShowUserIdentifier field to given value.

### HasShowUserIdentifier

`func (o *SignInPageAllOfWidgetCustomizations) HasShowUserIdentifier() bool`

HasShowUserIdentifier returns a boolean if a field has been set.

### GetForgotPasswordLabel

`func (o *SignInPageAllOfWidgetCustomizations) GetForgotPasswordLabel() string`

GetForgotPasswordLabel returns the ForgotPasswordLabel field if non-nil, zero value otherwise.

### GetForgotPasswordLabelOk

`func (o *SignInPageAllOfWidgetCustomizations) GetForgotPasswordLabelOk() (*string, bool)`

GetForgotPasswordLabelOk returns a tuple with the ForgotPasswordLabel field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetForgotPasswordLabel

`func (o *SignInPageAllOfWidgetCustomizations) SetForgotPasswordLabel(v string)`

SetForgotPasswordLabel sets ForgotPasswordLabel field to given value.

### HasForgotPasswordLabel

`func (o *SignInPageAllOfWidgetCustomizations) HasForgotPasswordLabel() bool`

HasForgotPasswordLabel returns a boolean if a field has been set.

### GetForgotPasswordUrl

`func (o *SignInPageAllOfWidgetCustomizations) GetForgotPasswordUrl() string`

GetForgotPasswordUrl returns the ForgotPasswordUrl field if non-nil, zero value otherwise.

### GetForgotPasswordUrlOk

`func (o *SignInPageAllOfWidgetCustomizations) GetForgotPasswordUrlOk() (*string, bool)`

GetForgotPasswordUrlOk returns a tuple with the ForgotPasswordUrl field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetForgotPasswordUrl

`func (o *SignInPageAllOfWidgetCustomizations) SetForgotPasswordUrl(v string)`

SetForgotPasswordUrl sets ForgotPasswordUrl field to given value.

### HasForgotPasswordUrl

`func (o *SignInPageAllOfWidgetCustomizations) HasForgotPasswordUrl() bool`

HasForgotPasswordUrl returns a boolean if a field has been set.

### GetUnlockAccountLabel

`func (o *SignInPageAllOfWidgetCustomizations) GetUnlockAccountLabel() string`

GetUnlockAccountLabel returns the UnlockAccountLabel field if non-nil, zero value otherwise.

### GetUnlockAccountLabelOk

`func (o *SignInPageAllOfWidgetCustomizations) GetUnlockAccountLabelOk() (*string, bool)`

GetUnlockAccountLabelOk returns a tuple with the UnlockAccountLabel field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetUnlockAccountLabel

`func (o *SignInPageAllOfWidgetCustomizations) SetUnlockAccountLabel(v string)`

SetUnlockAccountLabel sets UnlockAccountLabel field to given value.

### HasUnlockAccountLabel

`func (o *SignInPageAllOfWidgetCustomizations) HasUnlockAccountLabel() bool`

HasUnlockAccountLabel returns a boolean if a field has been set.

### GetUnlockAccountUrl

`func (o *SignInPageAllOfWidgetCustomizations) GetUnlockAccountUrl() string`

GetUnlockAccountUrl returns the UnlockAccountUrl field if non-nil, zero value otherwise.

### GetUnlockAccountUrlOk

`func (o *SignInPageAllOfWidgetCustomizations) GetUnlockAccountUrlOk() (*string, bool)`

GetUnlockAccountUrlOk returns a tuple with the UnlockAccountUrl field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetUnlockAccountUrl

`func (o *SignInPageAllOfWidgetCustomizations) SetUnlockAccountUrl(v string)`

SetUnlockAccountUrl sets UnlockAccountUrl field to given value.

### HasUnlockAccountUrl

`func (o *SignInPageAllOfWidgetCustomizations) HasUnlockAccountUrl() bool`

HasUnlockAccountUrl returns a boolean if a field has been set.

### GetHelpLabel

`func (o *SignInPageAllOfWidgetCustomizations) GetHelpLabel() string`

GetHelpLabel returns the HelpLabel field if non-nil, zero value otherwise.

### GetHelpLabelOk

`func (o *SignInPageAllOfWidgetCustomizations) GetHelpLabelOk() (*string, bool)`

GetHelpLabelOk returns a tuple with the HelpLabel field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetHelpLabel

`func (o *SignInPageAllOfWidgetCustomizations) SetHelpLabel(v string)`

SetHelpLabel sets HelpLabel field to given value.

### HasHelpLabel

`func (o *SignInPageAllOfWidgetCustomizations) HasHelpLabel() bool`

HasHelpLabel returns a boolean if a field has been set.

### GetHelpUrl

`func (o *SignInPageAllOfWidgetCustomizations) GetHelpUrl() string`

GetHelpUrl returns the HelpUrl field if non-nil, zero value otherwise.

### GetHelpUrlOk

`func (o *SignInPageAllOfWidgetCustomizations) GetHelpUrlOk() (*string, bool)`

GetHelpUrlOk returns a tuple with the HelpUrl field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetHelpUrl

`func (o *SignInPageAllOfWidgetCustomizations) SetHelpUrl(v string)`

SetHelpUrl sets HelpUrl field to given value.

### HasHelpUrl

`func (o *SignInPageAllOfWidgetCustomizations) HasHelpUrl() bool`

HasHelpUrl returns a boolean if a field has been set.

### GetCustomLink1Label

`func (o *SignInPageAllOfWidgetCustomizations) GetCustomLink1Label() string`

GetCustomLink1Label returns the CustomLink1Label field if non-nil, zero value otherwise.

### GetCustomLink1LabelOk

`func (o *SignInPageAllOfWidgetCustomizations) GetCustomLink1LabelOk() (*string, bool)`

GetCustomLink1LabelOk returns a tuple with the CustomLink1Label field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetCustomLink1Label

`func (o *SignInPageAllOfWidgetCustomizations) SetCustomLink1Label(v string)`

SetCustomLink1Label sets CustomLink1Label field to given value.

### HasCustomLink1Label

`func (o *SignInPageAllOfWidgetCustomizations) HasCustomLink1Label() bool`

HasCustomLink1Label returns a boolean if a field has been set.

### GetCustomLink1Url

`func (o *SignInPageAllOfWidgetCustomizations) GetCustomLink1Url() string`

GetCustomLink1Url returns the CustomLink1Url field if non-nil, zero value otherwise.

### GetCustomLink1UrlOk

`func (o *SignInPageAllOfWidgetCustomizations) GetCustomLink1UrlOk() (*string, bool)`

GetCustomLink1UrlOk returns a tuple with the CustomLink1Url field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetCustomLink1Url

`func (o *SignInPageAllOfWidgetCustomizations) SetCustomLink1Url(v string)`

SetCustomLink1Url sets CustomLink1Url field to given value.

### HasCustomLink1Url

`func (o *SignInPageAllOfWidgetCustomizations) HasCustomLink1Url() bool`

HasCustomLink1Url returns a boolean if a field has been set.

### GetCustomLink2Label

`func (o *SignInPageAllOfWidgetCustomizations) GetCustomLink2Label() string`

GetCustomLink2Label returns the CustomLink2Label field if non-nil, zero value otherwise.

### GetCustomLink2LabelOk

`func (o *SignInPageAllOfWidgetCustomizations) GetCustomLink2LabelOk() (*string, bool)`

GetCustomLink2LabelOk returns a tuple with the CustomLink2Label field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetCustomLink2Label

`func (o *SignInPageAllOfWidgetCustomizations) SetCustomLink2Label(v string)`

SetCustomLink2Label sets CustomLink2Label field to given value.

### HasCustomLink2Label

`func (o *SignInPageAllOfWidgetCustomizations) HasCustomLink2Label() bool`

HasCustomLink2Label returns a boolean if a field has been set.

### GetCustomLink2Url

`func (o *SignInPageAllOfWidgetCustomizations) GetCustomLink2Url() string`

GetCustomLink2Url returns the CustomLink2Url field if non-nil, zero value otherwise.

### GetCustomLink2UrlOk

`func (o *SignInPageAllOfWidgetCustomizations) GetCustomLink2UrlOk() (*string, bool)`

GetCustomLink2UrlOk returns a tuple with the CustomLink2Url field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetCustomLink2Url

`func (o *SignInPageAllOfWidgetCustomizations) SetCustomLink2Url(v string)`

SetCustomLink2Url sets CustomLink2Url field to given value.

### HasCustomLink2Url

`func (o *SignInPageAllOfWidgetCustomizations) HasCustomLink2Url() bool`

HasCustomLink2Url returns a boolean if a field has been set.

### GetAuthenticatorPageCustomLinkLabel

`func (o *SignInPageAllOfWidgetCustomizations) GetAuthenticatorPageCustomLinkLabel() string`

GetAuthenticatorPageCustomLinkLabel returns the AuthenticatorPageCustomLinkLabel field if non-nil, zero value otherwise.

### GetAuthenticatorPageCustomLinkLabelOk

`func (o *SignInPageAllOfWidgetCustomizations) GetAuthenticatorPageCustomLinkLabelOk() (*string, bool)`

GetAuthenticatorPageCustomLinkLabelOk returns a tuple with the AuthenticatorPageCustomLinkLabel field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetAuthenticatorPageCustomLinkLabel

`func (o *SignInPageAllOfWidgetCustomizations) SetAuthenticatorPageCustomLinkLabel(v string)`

SetAuthenticatorPageCustomLinkLabel sets AuthenticatorPageCustomLinkLabel field to given value.

### HasAuthenticatorPageCustomLinkLabel

`func (o *SignInPageAllOfWidgetCustomizations) HasAuthenticatorPageCustomLinkLabel() bool`

HasAuthenticatorPageCustomLinkLabel returns a boolean if a field has been set.

### GetAuthenticatorPageCustomLinkUrl

`func (o *SignInPageAllOfWidgetCustomizations) GetAuthenticatorPageCustomLinkUrl() string`

GetAuthenticatorPageCustomLinkUrl returns the AuthenticatorPageCustomLinkUrl field if non-nil, zero value otherwise.

### GetAuthenticatorPageCustomLinkUrlOk

`func (o *SignInPageAllOfWidgetCustomizations) GetAuthenticatorPageCustomLinkUrlOk() (*string, bool)`

GetAuthenticatorPageCustomLinkUrlOk returns a tuple with the AuthenticatorPageCustomLinkUrl field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetAuthenticatorPageCustomLinkUrl

`func (o *SignInPageAllOfWidgetCustomizations) SetAuthenticatorPageCustomLinkUrl(v string)`

SetAuthenticatorPageCustomLinkUrl sets AuthenticatorPageCustomLinkUrl field to given value.

### HasAuthenticatorPageCustomLinkUrl

`func (o *SignInPageAllOfWidgetCustomizations) HasAuthenticatorPageCustomLinkUrl() bool`

HasAuthenticatorPageCustomLinkUrl returns a boolean if a field has been set.

### GetClassicRecoveryFlowEmailOrUsernameLabel

`func (o *SignInPageAllOfWidgetCustomizations) GetClassicRecoveryFlowEmailOrUsernameLabel() string`

GetClassicRecoveryFlowEmailOrUsernameLabel returns the ClassicRecoveryFlowEmailOrUsernameLabel field if non-nil, zero value otherwise.

### GetClassicRecoveryFlowEmailOrUsernameLabelOk

`func (o *SignInPageAllOfWidgetCustomizations) GetClassicRecoveryFlowEmailOrUsernameLabelOk() (*string, bool)`

GetClassicRecoveryFlowEmailOrUsernameLabelOk returns a tuple with the ClassicRecoveryFlowEmailOrUsernameLabel field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetClassicRecoveryFlowEmailOrUsernameLabel

`func (o *SignInPageAllOfWidgetCustomizations) SetClassicRecoveryFlowEmailOrUsernameLabel(v string)`

SetClassicRecoveryFlowEmailOrUsernameLabel sets ClassicRecoveryFlowEmailOrUsernameLabel field to given value.

### HasClassicRecoveryFlowEmailOrUsernameLabel

`func (o *SignInPageAllOfWidgetCustomizations) HasClassicRecoveryFlowEmailOrUsernameLabel() bool`

HasClassicRecoveryFlowEmailOrUsernameLabel returns a boolean if a field has been set.

### GetWidgetGeneration

`func (o *SignInPageAllOfWidgetCustomizations) GetWidgetGeneration() string`

GetWidgetGeneration returns the WidgetGeneration field if non-nil, zero value otherwise.

### GetWidgetGenerationOk

`func (o *SignInPageAllOfWidgetCustomizations) GetWidgetGenerationOk() (*string, bool)`

GetWidgetGenerationOk returns a tuple with the WidgetGeneration field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetWidgetGeneration

`func (o *SignInPageAllOfWidgetCustomizations) SetWidgetGeneration(v string)`

SetWidgetGeneration sets WidgetGeneration field to given value.

### HasWidgetGeneration

`func (o *SignInPageAllOfWidgetCustomizations) HasWidgetGeneration() bool`

HasWidgetGeneration returns a boolean if a field has been set.

### GetPostAuthKeepMeSignedInPrompt

`func (o *SignInPageAllOfWidgetCustomizations) GetPostAuthKeepMeSignedInPrompt() PostAuthKeepMeSignedInPrompt`

GetPostAuthKeepMeSignedInPrompt returns the PostAuthKeepMeSignedInPrompt field if non-nil, zero value otherwise.

### GetPostAuthKeepMeSignedInPromptOk

`func (o *SignInPageAllOfWidgetCustomizations) GetPostAuthKeepMeSignedInPromptOk() (*PostAuthKeepMeSignedInPrompt, bool)`

GetPostAuthKeepMeSignedInPromptOk returns a tuple with the PostAuthKeepMeSignedInPrompt field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetPostAuthKeepMeSignedInPrompt

`func (o *SignInPageAllOfWidgetCustomizations) SetPostAuthKeepMeSignedInPrompt(v PostAuthKeepMeSignedInPrompt)`

SetPostAuthKeepMeSignedInPrompt sets PostAuthKeepMeSignedInPrompt field to given value.

### HasPostAuthKeepMeSignedInPrompt

`func (o *SignInPageAllOfWidgetCustomizations) HasPostAuthKeepMeSignedInPrompt() bool`

HasPostAuthKeepMeSignedInPrompt returns a boolean if a field has been set.

### GetClassicFooterHelpTitle

`func (o *SignInPageAllOfWidgetCustomizations) GetClassicFooterHelpTitle() string`

GetClassicFooterHelpTitle returns the ClassicFooterHelpTitle field if non-nil, zero value otherwise.

### GetClassicFooterHelpTitleOk

`func (o *SignInPageAllOfWidgetCustomizations) GetClassicFooterHelpTitleOk() (*string, bool)`

GetClassicFooterHelpTitleOk returns a tuple with the ClassicFooterHelpTitle field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetClassicFooterHelpTitle

`func (o *SignInPageAllOfWidgetCustomizations) SetClassicFooterHelpTitle(v string)`

SetClassicFooterHelpTitle sets ClassicFooterHelpTitle field to given value.

### HasClassicFooterHelpTitle

`func (o *SignInPageAllOfWidgetCustomizations) HasClassicFooterHelpTitle() bool`

HasClassicFooterHelpTitle returns a boolean if a field has been set.


[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


